[gd_scene load_steps=12 format=3 uid="uid://ct88thi23iqv6"]

[ext_resource type="Script" uid="uid://dpa0g5owqhboa" path="res://src/world/box.gd" id="1_cwdg0"]
[ext_resource type="AudioStream" uid="uid://cgq25ebcobhq" path="res://assets/audio/sfx/box1.wav" id="4_x4rov"]
[ext_resource type="PackedScene" uid="uid://d1x762grcijo4" path="res://assets/models/box.fbx" id="4_y07hl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cwdg0"]
rough = true

[sub_resource type="Animation" id="Animation_642he"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("box/Box/Box_001:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.48353)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("box/Box/Box_002:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, -1.53589)]
}

[sub_resource type="Animation" id="Animation_cwdg0"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("box/Box/Box_001:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.48353), Vector3(0, 0, 1.0472)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("box/Box/Box_002:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, -1.53589), Vector3(0, -3.14159, 1.13446)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_642he"]
_data = {
&"RESET": SubResource("Animation_642he"),
&"open": SubResource("Animation_cwdg0")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_642he"]
size = Vector3(1.2, 0.7, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_j3hw6"]
size = Vector3(0.03, 0.6, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_x4rov"]
size = Vector3(1.2, 0.05, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_y07hl"]
size = Vector3(0.79, 0.05, 1.2)

[node name="RigidBody3D" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_cwdg0")
can_sleep = false
freeze = true
continuous_cd = true
max_contacts_reported = 1
script = ExtResource("1_cwdg0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_642he")
}

[node name="item_detector" type="Area3D" parent="."]
collision_layer = 3
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="item_detector"]
shape = SubResource("BoxShape3D_642he")
debug_color = Color(0.38169, 0.474728, 1, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x4rov")
bus = &"sfx"

[node name="box" parent="." instance=ExtResource("4_y07hl")]

[node name="Box_001" parent="box/Box" index="0"]
transform = Transform3D(0.0871556, 0.996195, 0, -0.996195, 0.0871556, 0, 0, 0, 1, -0.599999, 0.4, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="box/Box/Box_001" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.301915, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="box/Box/Box_001/StaticBody3D"]
shape = SubResource("BoxShape3D_j3hw6")

[node name="Box_002" parent="box/Box" index="1"]
transform = Transform3D(-0.0348993, -0.999391, -2.53518e-06, -0.999391, 0.0348993, 0, 8.8476e-08, 2.53364e-06, -1, 0.600001, 0.4, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="box/Box/Box_002" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.301915, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="box/Box/Box_002/StaticBody3D"]
shape = SubResource("BoxShape3D_j3hw6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.374622, 0)
shape = SubResource("BoxShape3D_x4rov")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.578741, 0, 0)
shape = SubResource("BoxShape3D_y07hl")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.572664, 0, 0)
shape = SubResource("BoxShape3D_y07hl")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1.85148e-15, 4.37114e-08, 1, 1, -4.37114e-08, 5.9207e-17, 4.37114e-08, 1, -4.37114e-08, -0.0253494, 0, -0.57527)
shape = SubResource("BoxShape3D_y07hl")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1.85148e-15, 4.37114e-08, 1, 1, -4.37114e-08, 5.9207e-17, 4.37114e-08, 1, -4.37114e-08, 0.0192721, 0, 0.57527)
shape = SubResource("BoxShape3D_y07hl")

[connection signal="area_entered" from="item_detector" to="." method="_on_item_detector_area_entered"]
[connection signal="area_exited" from="item_detector" to="." method="_on_item_detector_area_exited"]
[connection signal="body_entered" from="item_detector" to="." method="_on_item_detector_body_entered"]
[connection signal="body_exited" from="item_detector" to="." method="_on_item_detector_body_exited"]
[connection signal="input_event" from="box/Box/Box_001/StaticBody3D" to="." method="_on_animatable_body_3d_input_event"]
[connection signal="input_event" from="box/Box/Box_002/StaticBody3D" to="." method="_on_animatable_body_3d_input_event"]

[editable path="box"]
